<resources>
    <string name="app_name">Sliding Puzzle</string>
    <string name="button_login">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="register_an_account">Register an Account</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="choose_password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="default_moves">0 moves</string>
    <string name="default_time">0 seconds</string>
    <string name="settings">Settings</string>
    <string name="leaderboards">Leaderboards</string>
    <plurals name="seconds">
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>
    <plurals name="moves">
        <item quantity="one">%1$d move</item>
        <item quantity="other">%1$d moves</item>
    </plurals>
    <string name="minutes_seconds">%1$dm %2$ds</string>
    <string name="default_image">default_image</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="nav_item_main_menu">Main Menu</string>
    <string name="nav_item_campaign">Campaign</string>
    <string name="nav_item_free_play">Free Play</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_leaderboards">Leaderboards</string>
    <string name="nav_item_signout">Sign Out</string>
    <!--<string name="nav_item_cheat">Enter Cheat</string>-->
    <string name="launcher_logo">launcher_logo</string>
    <string name="user_logo">user_logo</string>
    <string name="change_free_play_puzzle">Change Free Play Puzzle</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_main_menu</item>
        <item>@string/nav_item_campaign</item>
        <item>@string/nav_item_free_play</item>
        <item>@string/nav_item_leaderboards</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_signout</item>
        <!--<item>@string/nav_item_cheat</item>-->
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="free_play">Free Play</string>
    <string name="campaign">Campaign</string>
    <string name="facebook_app_id">1281809765224669</string>
    <string name="pick_rows">Pick Rows</string>
    <string name="pick_columns">Pick Columns</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="level_10">Level 10</string>
    <string name="level_11">Level 11</string>
    <string name="level_12">Level 12</string>
    <string name="level_13">Level 13</string>
    <string name="level_14">Level 14</string>
    <string name="level_15">Level 15</string>
    <string name="level_16">Level 16</string>
    <string name="level_17">Level 17</string>
    <string name="level_18">Level 18</string>
    <string name="level_19">Level 19</string>
    <string name="level_20">Level 20</string>
    <string name="level">Level</string>
    <string name="email">Email</string>
    <string name="score">Score</string>
    <string name="moves">Moves</string>
    <string name="time">Time</string>
    <string name="game_paused">Game Paused</string>
    <string name="resume">Resume</string>
    <string name="quit">Quit</string>
    <string name="banner_ad_unit_id">ca-app-pub-3063574658609710/8173909984</string>
    <string name="banner_ad">ca-app-pub-3063574658609710~5220443587</string>
    <string name="interstitial_ad">ca-app-pub-3063574658609710/1935573180</string>
    <string name="native_ad">ca-app-pub-3063574658609710/6626137989</string>
    <!--<string name="native_ad_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="privacy_policy_url"><a href="https://johnmillercoding.com/SlidingPuzzle/">Privacy Policy</a></string>
    <string name="level_completed">Level Completed</string>
    <string name="next_level">Next Level</string>
    <string name="replay">Replay</string>
    <string name="main_menu">Main Menu</string>
    <string name="pause_fragment_image">Pause Fragment Image</string>
    <string name="i_agree_to_the_tos_and_the_privacy_policy">I agree to the ToS and the Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
