<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_completed"
        android:textColor="#000"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/gradient"/>
    <Button
        android:id="@+id/replayButton"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:text="@string/replay"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"/>
    <Button
        android:id="@+id/nextLevelButton"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:text="@string/next_level"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"/>
    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"/>
    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/gradient"/>
</LinearLayout>