<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.johnmillercoding.slidingpuzzle.activities.LeaderboardFragment"
    android:background="@drawable/gradient">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout"
        android:background="#CCFFFFFF">


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:textStyle="bold"
            android:text="@string/level"
            android:textAlignment="center"
            android:textSize="18sp"/>



        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:textStyle="bold"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/score"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:textStyle="bold"
            android:text="@string/moves"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/time"
            android:textAlignment="center"
            android:textSize="18sp"/>
    </LinearLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_below="@+id/linear_layout">

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="#CCFFFFFF">
        </ListView>

    </RelativeLayout>
</RelativeLayout>
