<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/level_1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_an_account"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:background="@drawable/gradient"
        android:id="@+id/textView5" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView5"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adView2"
        android:layout_above="@+id/checkBoxAgree"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_email"
        android:id="@+id/textViewEmail"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/editTextRegisterEmail"
        android:layout_alignBottom="@+id/editTextRegisterEmail"
        android:layout_alignParentStart="true"
        android:labelFor="@+id/editTextRegisterEmail"
        android:background="@drawable/gradient"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/editTextRegisterPassword" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_password"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:labelFor="@+id/editTextRegisterPassword"
        android:background="@drawable/gradient"
        android:id="@+id/textView6"
        android:layout_marginTop="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/confirm_password"
        android:id="@+id/textViewConfirmPassword"
        android:layout_alignBaseline="@+id/editTextConfirmRegisterPassword"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"
        android:layout_alignTop="@+id/editTextConfirmRegisterPassword"
        android:labelFor="@+id/editTextConfirmRegisterPassword"
        android:background="@drawable/gradient"/>

        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextRegisterPassword"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/editTextConfirmRegisterPassword" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editTextConfirmRegisterPassword"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textViewConfirmPassword" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/editTextRegisterEmail"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textViewEmail" />
    </RelativeLayout>
    <CheckBox
        android:text="I agree to the ToS and the Privacy Policy"
        android:textColor="@color/colorAccent"
        android:buttonTint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxAgree"
        android:layout_above="@+id/linear_layout1"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/register"
        android:onClick="registerAccount"
        android:background="@drawable/button"
        android:id="@+id/button3" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="Privacy Policy"
        android:onClick="privacyPolicy"
        android:background="@drawable/button"
        android:id="@+id/button2" />
    </LinearLayout>
</RelativeLayout>

